# ml-research-platform

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_edge_check.db
.hermes/plans/: v1-architecture-redesign.md
data/: trend_report.md
data/dashboards/: dashboard_455298118331_1779007663.html
data/sessions/: 455298118331.json
docs/plans/: 2026-05-16-v0.2.0-research-knowledge-graph.md  2026-05-17-phase6-knowledge-graph.md
src/ml_platform/: __init__.py  cli.py  config.py  db.py  models.py
src/ml_platform/agent/: __init__.py  dashboard.py  future_work.py  question_clarifier.py  reproducibility.py  research_interviewer.py  session.py  unified_search.py
src/ml_platform/analysis/: __init__.py  analyzer.py  evidence.py  interview.py  models.py  prompts.py  reference_chain.py  research_map.py  trends.py
src/ml_platform/codegen/: __init__.py  deepcode_runner.py  deepcode_setup.py
src/ml_platform/discovery/: __init__.py  arxiv_client.py  huggingface_client.py  paperswithcode_client.py  pipeline.py  ranking.py  semantic_scholar_client.py
src/ml_platform/graph/: __init__.py  builder.py  entity_resolver.py  knowledge_graph.py  models.py  visualizer.py
src/ml_platform/orchestration/: __init__.py  github_pusher.py  orchestrator.py  reporter.py
src/ml_platform/processing/: __init__.py  enricher.py  grobid_client.py  pdf_downloader.py  pipeline.py  processor.py  tei_parser.py
src/ml_platform/wiki/: __init__.py
tests/: test_phase0.py
