[project]
name = "ml-research-platform"
version = "0.2.0"
description = "Autonomous ML Research Infrastructure: Paper Discovery → Code Generation Pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "apscheduler>=3.10",
    "defusedxml>=0.7.1",
    "deepcode-hku>=1.2.0",
    "pypdf2>=3.0.1",
    "graphqlite>=0.4.0",
    "pyvis>=0.3.2",
    "openkb>=0.1.4",
    "langgraph>=1.2.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langchain-core>=1.4.0",
    "litellm>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
ml-research = "ml_platform.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_platform"]

[tool.uv]
prerelease = "allow"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
